--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-fastapi
-uvicorn[standard]
-pyannote.audio
-openai-whisper
-whisperx
-librosa
-soundfile
+streamlit
 numpy
+scipy
+librosa
+pydub
+soundfile
+scikit-learn
+pyannote.audio
+torch
+torchaudio
+transformers
 pandas
-python-multipart
+matplotlib
+tqdm
+sentencepiece
 ffmpeg-python
