--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
+
 streamlit
 numpy
 scipy
 librosa
-pydub
 soundfile
+pydub
+matplotlib
 scikit-learn
-pyannote.audio
 torch
 torchaudio
-transformers
-pandas
-matplotlib
-tqdm
-sentencepiece
+openai-whisper
+pyannote.audio
+pyannote.core
+python-dotenv
 ffmpeg-python
+tqdm
+pandas
+numba
+protobuf
